intergration do sonarqube dans docker